# robot_retarget_tool

./: .gitignore  CMakeLists.txt  MocapAPI的修改逻辑.txt  MocapData.h  README.md  build.bat  handle_manager.hpp  mcp_robot.cpp  mcp_robot.h  robot_api.cpp  robot_api.h  robot_api_demo.cpp  robot_api_demo2.cpp  robot_api_demo3.cpp  运行demo3.txt
librobot/: CMakeLists.txt
librobot/include/: FscAlgorithmImpl.h  MotionAdaptorLib.h  ik.h  jointnode.h  mathutils.h  robot.h
librobot/src/: FscAlgorithmImpl.cpp  MotionAdaptorLib.cpp  ik.cpp  jointnode.cpp  mathutils.cpp  robot.cpp
post-eba工具/post-eba-2025.5.9/: run-release.bat
post-eba工具/post-eba-2025.5.9/assets/materials/default/: code.frag
post-eba工具/post-eba-2025.5.9/assets/materials/pns_robot/: pns_robot_logo.material
post-eba工具/post-eba-2025.5.9/assets/meshes/: Camera.fbx  Cylinder.FBX  Sphere.FBX  Torus.fbx  plane.fbx
post-eba工具/post-eba-2025.5.9/assets/shaders/: BasePassAttributes.glsl
post-eba工具/post-eba-2025.5.9/robots/g1_29dof_with_yinshihand_rev_1_0/: retarget_withHand.json
post-eba工具/post-eba-2025.5.9/robots/h1/: 2025-02-14-11-16-36.json
post-eba工具/post-eba20260107/assets/materials/default/: default.material
post-eba工具/post-eba20260107/assets/materials/floor_tiles/: code.frag  floor_tiles.material
post-eba工具/post-eba20260107/assets/materials/pns_robot/: dark.frag  light.frag  logo.frag  pns_robot_dark.material  pns_robot_light.material  pns_robot_mask.material
post-eba工具/post-eba20260107/assets/materials/transparent/: code.frag
post-eba工具/post-eba20260107/assets/meshes/: Axis.FBX  Cone.FBX  Cube.FBX  PNSRobot_X-F_Y-Up.fbx  PNSRobot_X90_Z_Up_noHand.fbx
post-eba工具/post-eba20260107/assets/shaders/: Geometry.vert
post-eba工具/post-eba20260107/assets/shaders/Lib/: Math.glsl
post-eba工具/post-eba20260107/robots/g1_29dof_with_yinshihand_rev_1_0/: g1_29dof_with_yinshihand_rev_1_0.urdf  project.json
post-eba工具/post-eba20260107/robots/h1/: project.json  retarget.json
